Update about page's text

--- a/about.html
+++ b/about.html
@@ -40,8 +40,10 @@
       <div class="about__text">
         <h1>About</h1>
         <p>
-          I am a web developer from Germany and currently living in Berlin.
-          I have a bachelor degree in business administration and speak German, English and Mandarin.
+          I am a passionate full-stack web developer from Germany. 
+          My home town is Rostock, but I am currently living in the vibrant city of Berlin. 
+          My journey into the world of web development began after obtaining a bachelor's degree in Business Administration.
+          Besides my mother tongue German I also speak English and Mandarin. 
         </p>
         <a href="files/cv.pdf" class="button" download>Download my CV</a>
       </div>
