Update target of 'Download my CV', so it opens in new tab

--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
           My journey into the world of web development began after obtaining a bachelor's degree in Business Administration.
           Besides my mother tongue German I also speak English and Mandarin. 
         </p>
-        <a href="files/cv.pdf" class="button" download>Download my CV</a>
+        <a href="files/cv.pdf" target="_blank" class="button" download>Download my CV</a>
       </div>
       <svg id="about-picture" xmlns="http://www.w3.org/2000/svg" class="berlin-illustration" height="auto" viewBox="0 0 700 505" xmlns:xlink="http://www.w3.org/1999/xlink">
         <defs>
