Update about page's text

--- a/about.html
+++ b/about.html
@@ -41,8 +41,8 @@
         <h1>About</h1>
         <p>
           I am a passionate full-stack web developer from Germany. 
-          My home town is Rostock, but I am currently living in the vibrant city of Berlin. 
-          My journey into the world of web development began after obtaining a bachelor's degree in Business Administration.
+          My hometown is Rostock, but I am currently living in the vibrant city of Berlin.
+          After obtaining a bachelor's degree in Business Administration, I enrolled in a CareerFoundry program to fulfill my dream to become a full-stack web developer.
           Besides my mother tongue German I also speak English and Mandarin. 
         </p>
         <a href="files/cv.pdf" target="_blank" class="button" download>Download my CV</a>
