Add button class to 'Contact me' on contact page

--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
                 Email <a href="mailto:isabel.matula(at)outlook(dot)de">isabel.matula@outlook.de</a>
             </div>
             <div>
-                <a href="mailto:isabel.matula(at)outlook(dot)de">Contact me</a>
+                <a href="mailto:isabel.matula(at)outlook(dot)de" class="button">Contact me</a>
             </div>
             <form action="" method="post" id="contact-form">
                 <label class="standard-label" for="contact-email">Email: </label>
