Add 'contact__information' class on contact page and  add margin for it in style.css

--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
     <main>
         <div class="contact">
             <h1>Contact</h1>
-            <div>
+            <div class="contact__information">
                 Isabel Matula<br>
                 Badener Ring 19<br>
                 12101 Berlin<br>
