Update home page's text

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <div class="profile">
             <img src="img/isabel-matula.png" class="profile__portrait" alt="Isabel Matula Portrait">
             <div class="profile__text">
-                <h1>Hello World</h1>
+                <h1>Hello World!</h1>
                 <p>
-                    My name is Isabel Matula. I am a <span>web</span> developer from Germany.
+                    My name is Isabel Matula. I am a web developer from Germany.
                 </p>
                 <a href="#">Check out some of my code</a>
             </div>
