--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <p>
                     My name is Isabel Matula. I am a web developer from Germany.
                 </p>
-                <a href="#">Check out some of my code</a>
+                <a href="work.html">Check out some of my code</a>
             </div>
         </div>
     </main>
