--- a/contact.html
+++ b/contact.html
@@ -71,5 +71,6 @@
         </div>
         <a href="#top">Back to top</a>
     </footer>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
