--- a/work.html
+++ b/work.html
@@ -39,46 +39,52 @@
         <div class="project-list">
             <!-- Project items -->
             <div class="project-list__item">
-                <h2>Project 1</h2>
+                <h2>Meet App</h2>
+                <a href="https://isabelwen.github.io/meet/" target="_blank"><img src="img/meet_app_project.png"></a>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum esse, corrupti animi incidunt quasi non placeat.
+                    A serverless, progressive web application (PWA) with React using a test-driven development (TDD) technique. The Meet App uses the Google Calendar API to fetch upcoming events. Technologies used throughout the project are React, Jest-Cucumber, Puppeteer and Recharts.
                 </p>
-                <a href="#">See project on GitHub</a>
+                <a href="https://github.com/IsabelWen/meet" target="_blank">See project on GitHub</a>
              </div>
              <div class="project-list__item">
                 <h2>Project 2</h2>
+                <a href="#" target="_blank"><img src="img/project_cover.png"></a>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab perspiciatis ut quae laudantium hic esse unde!
                 </p>
-                <a href="#">See project on GitHub</a>
+                <a href="#" target="_blank">See project on GitHub</a>
              </div>
              <div class="project-list__item">
                 <h2>Project 3</h2>
+                <a href="#" target="_blank"><img src="img/project_cover.png"></a>
                 <p>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat doloremque eaque corporis illo numquam suscipit voluptas.
                 </p>
-                <a href="#">See project on GitHub</a>
+                <a href="#" target="_blank">See project on GitHub</a>
              </div>
              <div class="project-list__item">
                 <h2>Project 4</h2>
+                <a href="#" target="_blank"><img src="img/project_cover.png"></a>
                 <p>
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde eos necessitatibus illum deserunt, quod atque earum.
                 </p>
-                <a href="#">See project on GitHub</a>
+                <a href="#" target="_blank">See project on GitHub</a>
              </div>
              <div class="project-list__item">
                 <h2>Project 5</h2>
+                <a href="#" target="_blank"><img src="img/project_cover.png"></a>
                 <p>
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error eos quo exercitationem accusantium, sapiente eum optio.
                 </p>
-                <a href="#">See project on GitHub</a>
+                <a href="#" target="_blank">See project on GitHub</a>
              </div>
              <div class="project-list__item">
                 <h2>Project 6</h2>
+                <a href="#" target="_blank"><img src="img/project_cover.png"></a>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem temporibus quis voluptatibus nesciunt ea recusandae autem.
                 </p>
-                <a href="#">See project on GitHub</a>
+                <a href="#" target="_blank">See project on GitHub</a>
              </div>
         </div>
     </section>
