Active navigation item on scroll

--- a/index.html
+++ b/index.html
@@ -16,12 +16,9 @@
     <div class="header-container">
         <header class="page-header" id="top"> 
             <!--My logo-->
-            <img src="img/isabel-matula-logo.svg" alt="Personal logo of Isabel Matula" class="page-header__item" id="logo">
+            <img src="img/isabel-matula-logo_v3.svg" alt="Personal logo of Isabel Matula" class="page-header__item" id="logo">
             <nav class="page-header__item">
                 <ul role="menubar" class="navigation-list">
-                    <li role="presentation">
-                        <a href="#top" role="menuitem" class="navigation-list__item">Home</a>
-                    </li>
                     <li role="presentation">
                         <a href="#about" role="menuitem" class="navigation-list__item">About me</a>
                     </li>
@@ -36,7 +33,7 @@
         </header>
     </div>
     <!-- Main content -->
-    <main id="about">
+    <section id="about">
         <div class="profile">
             <img src="img/isabel-matula.png" class="profile__portrait" alt="Isabel Matula Portrait">
             <div class="profile__text">
@@ -44,10 +41,10 @@
                 <p>
                     My name is Isabel Matula. I am a web developer from Germany.
                 </p>
-                <a href="work.html">Check out some of my code</a>
+                <a href="#work">Check out some of my code</a>
             </div>
         </div>
-    </main>
+    </section>
     <!-- Work -->
     <section class="work" id="work">
         <h1>Work</h1>
@@ -104,7 +101,7 @@
         </div>
     </section>
     <!-- Contact Information -->
-    <main id="contact">
+    <section id="contact">
         <div class="contact">
             <h1>Contact</h1>
             <div class="contact__information">
@@ -119,7 +116,7 @@
                 <a href="mailto:isabel.matula(at)outlook(dot)de" class="button">Contact me</a>
             </div>
         </div>
-    </main>
+    </section>
     <!-- Footer with links to social media profiles -->
     <footer class="page-footer">
         <p>Find me on</p>
