Change button styling

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
         <div class="profile">
             <img src="img/isabel-matula.png" class="profile__portrait" alt="Isabel Matula Portrait">
             <div class="profile__text">
-                <h1>Hello World!</h1>
+                <h1>Full-Stack Web Developer</h1>
                 <p>
                     My name is Isabel Matula. I am a web developer from Germany.
                 </p>
-                <a href="#work">Check out some of my code</a>
+                <a href="#contact" class="button">Get in Touch</a>
             </div>
         </div>
     </section>
