Add projects to work section

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                     To make my coding passion my profession, I completed Career Foundry's Full-Stack Web Developer program, learning JavaScript, React, NoSQL and more. 
                     Now, I'm on the lookout for a role that values continuous growth. 
                 </p>
+                <a href="files/cv.pdf" target="_blank" download>Download my CV</a>
                 <a href="#contact" class="button">Get in Touch</a>
             </div>
         </div>
@@ -59,28 +60,31 @@
         <div class="project-list">
             <!-- Project items -->
             <div class="project-list__item">
-                <h2>Meet App</h2>
-                <a href="https://isabelwen.github.io/meet/" target="_blank"><img src="img/meet_app_project.png"></a>
-                <p>
-                    A serverless, progressive web application (PWA) with React using a test-driven development (TDD) technique. The Meet App uses the Google Calendar API to fetch upcoming events. Technologies used throughout the project are React, Jest-Cucumber, Puppeteer and Recharts.
-                </p>
-                <a href="https://github.com/IsabelWen/meet" target="_blank">See project on GitHub</a>
-             </div>
-             <div class="project-list__item">
-                <h2>Project 2</h2>
-                <a href="#" target="_blank"><img src="img/project_cover.png"></a>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab perspiciatis ut quae laudantium hic esse unde!
-                </p>
-                <a href="#" target="_blank">See project on GitHub</a>
-             </div>
-             <div class="project-list__item">
-                <h2>Project 3</h2>
-                <a href="#" target="_blank"><img src="img/project_cover.png"></a>
+                <h2>React Movie App</h2>
+                <a href="#" target="_blank"><img src="img/react_movie_app_project.png"></a>
                 <p>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat doloremque eaque corporis illo numquam suscipit voluptas.
                 </p>
-                <a href="#" target="_blank">See project on GitHub</a>
+                <a href="#" target="_blank" class="button">Code</a>
+                <a href="#" target="_blank" class="button">Demo</a>
+             </div>
+             <div class="project-list__item">
+                <h2>Meet App</h2>
+                <a href="https://isabelwen.github.io/meet/" target="_blank"><img src="img/meet_app_project.png"></a>
+                <p>
+                    A serverless, progressive web application (PWA) using a test-driven development (TDD) technique. The Meet App uses the Google Calendar API to fetch upcoming events.
+                </p>
+                <a href="https://github.com/IsabelWen/meet" target="_blank" class="button">Code</a>
+                <a href="#" target="_blank" class="button">Demo</a>
+             </div>
+             <div class="project-list__item">
+                <h2>Angular Movie App</h2>
+                <a href="#" target="_blank"><img src="img/angular_movie_app_project.png"></a>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab perspiciatis ut quae laudantium hic esse unde!
+                </p>
+                <a href="#" target="_blank" class="button">Code</a>
+                <a href="#" target="_blank" class="button">Demo</a>
              </div>
              <div class="project-list__item">
                 <h2>Project 4</h2>
@@ -88,7 +92,8 @@
                 <p>
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde eos necessitatibus illum deserunt, quod atque earum.
                 </p>
-                <a href="#" target="_blank">See project on GitHub</a>
+                <a href="#" target="_blank" class="button">Code</a>
+                <a href="#" target="_blank" class="button">Demo</a>
              </div>
              <div class="project-list__item">
                 <h2>Project 5</h2>
@@ -96,15 +101,17 @@
                 <p>
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error eos quo exercitationem accusantium, sapiente eum optio.
                 </p>
-                <a href="#" target="_blank">See project on GitHub</a>
+                <a href="#" target="_blank" class="button">Code</a>
+                <a href="#" target="_blank" class="button">Demo</a>
              </div>
              <div class="project-list__item">
                 <h2>Project 6</h2>
                 <a href="#" target="_blank"><img src="img/project_cover.png"></a>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem temporibus quis voluptatibus nesciunt ea recusandae autem.
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error eos quo exercitationem accusantium, sapiente eum optio.
                 </p>
-                <a href="#" target="_blank">See project on GitHub</a>
+                <a href="#" target="_blank" class="button">Code</a>
+                <a href="#" target="_blank" class="button">Demo</a>
              </div>
         </div>
     </section>
