--- a/index.html
+++ b/index.html
@@ -61,30 +61,33 @@
             <!-- Project items -->
             <div class="project-list__item">
                 <h2>React Movie App</h2>
-                <a href="#" target="_blank"><img src="img/react_movie_app_project.png"></a>
+                <a href="https://mymovie-api.netlify.app/login" target="_blank"><img src="img/react_movie_app_project.png"></a>
                 <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat doloremque eaque corporis illo numquam suscipit voluptas.
+                    React Client-side for an application called myMovie based on its
+                    existing server-side code (REST API and database).
                 </p>
-                <a href="#" target="_blank" class="button">Code</a>
-                <a href="#" target="_blank" class="button">Demo</a>
+                <a href="https://github.com/IsabelWen/movie_api-client" target="_blank" class="button">Code</a>
+                <a href="https://mymovie-api.netlify.app/login" target="_blank" class="button">Demo</a>
              </div>
              <div class="project-list__item">
                 <h2>Meet App</h2>
                 <a href="https://isabelwen.github.io/meet/" target="_blank"><img src="img/meet_app_project.png"></a>
                 <p>
-                    A serverless, progressive web application (PWA) using a test-driven development (TDD) technique. The Meet App uses the Google Calendar API to fetch upcoming events.
+                    A serverless, progressive web application (PWA) using a test-driven development (TDD) technique. 
+                    The Meet App uses the Google Calendar API to fetch upcoming events.
                 </p>
                 <a href="https://github.com/IsabelWen/meet" target="_blank" class="button">Code</a>
-                <a href="#" target="_blank" class="button">Demo</a>
+                <a href="https://isabelwen.github.io/meet/" target="_blank" class="button">Demo</a>
              </div>
              <div class="project-list__item">
                 <h2>Angular Movie App</h2>
-                <a href="#" target="_blank"><img src="img/angular_movie_app_project.png"></a>
+                <a href="https://isabelwen.github.io/myMovie-Angular-app/welcome" target="_blank"><img src="img/angular_movie_app_project.png"></a>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab perspiciatis ut quae laudantium hic esse unde!
+                    Angular Client-side for an application called myMovie based on its
+                    existing server-side code (REST API and database).
                 </p>
-                <a href="#" target="_blank" class="button">Code</a>
-                <a href="#" target="_blank" class="button">Demo</a>
+                <a href="https://github.com/IsabelWen/myMovie-Angular-client" target="_blank" class="button">Code</a>
+                <a href="https://isabelwen.github.io/myMovie-Angular-app/welcome" target="_blank" class="button">Demo</a>
              </div>
              <div class="project-list__item">
                 <h2>Project 4</h2>
