Update project imgs

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <!-- Project items -->
             <div class="project-list__item">
                 <h2>React Movie App</h2>
-                <a href="https://mymovie-api.netlify.app/login" target="_blank"><img src="img/react_movie_app_project.png"></a>
+                <a href="https://mymovie-api.netlify.app/login" target="_blank"><img src="img/react_movie_app_project_full.png"></a>
                 <p>
                     React Client-side for an application called myMovie based on its
                     existing server-side code (REST API and database).
@@ -71,7 +71,7 @@
              </div>
              <div class="project-list__item">
                 <h2>Meet App</h2>
-                <a href="https://isabelwen.github.io/meet/" target="_blank"><img src="img/meet_app_project.png"></a>
+                <a href="https://isabelwen.github.io/meet/" target="_blank"><img src="img/meet_app_project_full.png"></a>
                 <p>
                     A serverless, progressive web application (PWA) using a test-driven development (TDD) technique. 
                     The Meet App uses the Google Calendar API to fetch upcoming events.
@@ -81,7 +81,7 @@
              </div>
              <div class="project-list__item">
                 <h2>Angular Movie App</h2>
-                <a href="https://isabelwen.github.io/myMovie-Angular-app/welcome" target="_blank"><img src="img/angular_movie_app_project.png"></a>
+                <a href="https://isabelwen.github.io/myMovie-Angular-app/welcome" target="_blank"><img src="img/angular_movie_app_project_full.png"></a>
                 <p>
                     Angular Client-side for an application called myMovie based on its
                     existing server-side code (REST API and database).
