Update project items layout

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                 <p>
                     React Client-side for an application called myMovie based on its
                     existing server-side code (REST API and database).
+                    User can create an user profile and save their favorite movies.
                 </p>
                 <a href="https://github.com/IsabelWen/movie_api-client" target="_blank" class="button">Code</a>
                 <a href="https://mymovie-api.netlify.app/login" target="_blank" class="button">Demo</a>
@@ -85,6 +86,7 @@
                 <p>
                     Angular Client-side for an application called myMovie based on its
                     existing server-side code (REST API and database).
+                    User can create an user profile and save their favorite movies.
                 </p>
                 <a href="https://github.com/IsabelWen/myMovie-Angular-client" target="_blank" class="button">Code</a>
                 <a href="https://isabelwen.github.io/myMovie-Angular-app/welcome" target="_blank" class="button">Demo</a>
