--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <!-- Header including the logo and the main navigation -->
     <div class="header-container">
-        <header class="page-header" id="top"> 
+        <header class="page-header"> 
             <!--My logo-->
             <img src="img/isabel-matula-logo_v3.svg" alt="Personal logo of Isabel Matula" class="page-header__item" id="logo">
             <nav class="page-header__item">
@@ -32,6 +32,7 @@
             </nav>
         </header>
     </div>
+    <div id="top" ></div>
     <!-- Main content -->
     <section id="about">
         <div class="profile">
@@ -126,8 +127,8 @@
             <h1>Contact</h1>
             <div class="contact__information">
                 Isabel Matula<br>
-                Badener Ring 19<br>
-                12101 Berlin<br>
+                Burgwall 18<br>
+                18055 Rostock<br>
                 Germany<br>
                 <br>
                 Email <a href="mailto:isabel.matula(at)outlook(dot)de">isabel.matula@outlook.de</a>
