Update projects imgs and links

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <!--Add own Favicon-->
     <link rel="shortcut icon" href="./img/isabel-matula-icon.ico">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <title>Home</title>
 </head>
@@ -68,6 +68,14 @@
                     existing server-side code (REST API and database).
                     User can create an user profile and save their favorite movies.
                 </p>
+                <div class="tags">
+                    <span class="tag">React</span>
+                    <span class="tag">SCSS</span>
+                    <span class="tag">HTML</span>
+                    <span class="tag">JavaScript</span>
+                    <span class="tag">Bootstrap</span>
+                    <span class="tag">Parcel</span>
+                </div>
                 <a href="https://github.com/IsabelWen/movie_api-client" target="_blank" class="button">Code</a>
                 <a href="https://mymovie-api.netlify.app/login" target="_blank" class="button">Demo</a>
              </div>
@@ -78,6 +86,14 @@
                     A serverless, progressive web application (PWA) using a test-driven development (TDD) technique. 
                     The Meet App uses the Google Calendar API to fetch upcoming events.
                 </p>
+                <div class="tags">
+                    <span class="tag">Google Calendar API</span>
+                    <span class="tag">HTML</span>
+                    <span class="tag">CSS</span>
+                    <span class="tag">AWS lambda</span>
+                    <span class="tag">JavaScript</span>
+                    <span class="tag">Gherkin</span>
+                </div>
                 <a href="https://github.com/IsabelWen/meet" target="_blank" class="button">Code</a>
                 <a href="https://isabelwen.github.io/meet/" target="_blank" class="button">Demo</a>
              </div>
@@ -89,49 +105,80 @@
                     existing server-side code (REST API and database).
                     User can create an user profile and save their favorite movies.
                 </p>
+                <div class="tags">
+                    <span class="tag">Angular</span>
+                    <span class="tag">TypeScript</span>
+                    <span class="tag">HTML</span>
+                    <span class="tag">Angular Material</span>
+                    <span class="tag">SCSS</span>
+                    <span class="tag">TypeDoc</span>
+                </div>
                 <a href="https://github.com/IsabelWen/myMovie-Angular-client" target="_blank" class="button">Code</a>
                 <a href="https://isabelwen.github.io/myMovie-Angular-app/welcome" target="_blank" class="button">Demo</a>
              </div>
              <div class="project-list__item">
-                <h2>Project 4</h2>
-                <a href="#" target="_blank"><img src="img/project_cover.png"></a>
+                <h2>myMovie API</h2>
+                <a href="https://github.com/IsabelWen/movie_api" target="_blank"><img src="img/mymovie-db.png"></a>
                 <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde eos necessitatibus illum deserunt, quod atque earum.
+                    This API provide users with access to information about different movies, directors, and genres. 
+                    Users are able to sign up, update their personal information, and create a list of their favorite movies.
                 </p>
-                <a href="#" target="_blank" class="button">Code</a>
-                <a href="#" target="_blank" class="button">Demo</a>
+                <div class="tags">
+                    <span class="tag">HTML</span>
+                    <span class="tag">MongoDB</span>
+                    <span class="tag">Mongoose</span>
+                    <span class="tag">JavaScript</span>
+                    <span class="tag">CSS</span>
+                    <span class="tag">Express</span>
+                    <span class="tag">Postman</span>
+                </div>
+                <a href="https://github.com/IsabelWen/movie_api" target="_blank" class="button">Code</a>
              </div>
              <div class="project-list__item">
-                <h2>Project 5</h2>
-                <a href="#" target="_blank"><img src="img/project_cover.png"></a>
+                <h2>Chat App</h2>
+                <a href="https://github.com/IsabelWen/chat" target="_blank"><img src="img/chat-app.png"></a>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error eos quo exercitationem accusantium, sapiente eum optio.
+                    A chat app for mobile devices using React Native. The app provides users with a chat interface and options to share images, audios and location.
                 </p>
-                <a href="#" target="_blank" class="button">Code</a>
-                <a href="#" target="_blank" class="button">Demo</a>
+                <div class="tags">
+                    <span class="tag">React Native</span>
+                    <span class="tag">Firebase</span>
+                    <span class="tag">Firestore</span>
+                    <span class="tag">JavaScript</span>
+                    <span class="tag">Expo</span>
+                    <span class="tag">GiftedChat</span>
+                </div>
+                <a href="https://github.com/IsabelWen/chat" target="_blank" class="button">Code</a>
              </div>
              <div class="project-list__item">
-                <h2>Project 6</h2>
-                <a href="#" target="_blank"><img src="img/project_cover.png"></a>
+                <h2>Pokemon-Index</h2>
+                <a href="https://isabelwen.github.io/simple-js-app/" target="_blank"><img src="img/pokemon-index.png"></a>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error eos quo exercitationem accusantium, sapiente eum optio.
+                    A small web application with HTML, CSS, and JavaScript that loads data about pokemons from an external API 
+                    and enables the viewing of data points in detail.
                 </p>
-                <a href="#" target="_blank" class="button">Code</a>
-                <a href="#" target="_blank" class="button">Demo</a>
+                <div class="tags">
+                    <span class="tag">JavaScript</span>
+                    <span class="tag">HTML</span>
+                    <span class="tag">CSS</span>
+                    <span class="tag">Bootstrap</span>
+                    <span class="tag">jQuery</span>
+                </div>
+                <a href="https://github.com/IsabelWen/simple-js-app" target="_blank" class="button">Code</a>
+                <a href="https://isabelwen.github.io/simple-js-app/" target="_blank" class="button">Demo</a>
              </div>
         </div>
     </section>
     <!-- Contact Information -->
     <section id="contact">
         <div class="contact">
-            <h1>Contact</h1>
+            <h1>Contact Me</h1>
             <div class="contact__information">
                 Isabel Matula<br>
-                Burgwall 18<br>
-                18055 Rostock<br>
-                Germany<br>
+                Rostock - Germany<br>
                 <br>
-                Email <a href="mailto:isabel.matula(at)outlook(dot)de">isabel.matula@outlook.de</a>
+                Email: <a href="mailto:isabel.matula(at)outlook(dot)de">isabel.matula@outlook.de</a><br>
+                Linkedin: <a href="https://www.linkedin.com/in/isabel-matula" target="_blank">Isabel Matula</a>
             </div>
             <div>
                 <a href="mailto:isabel.matula(at)outlook(dot)de" class="button">Contact me</a>
