stylin contact section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&display=swap" rel="stylesheet">
+    <script src="https://cdn.lordicon.com/lordicon.js"></script>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <title>Home</title>
 </head>
@@ -172,16 +173,22 @@
     <!-- Contact Information -->
     <section id="contact">
         <div class="contact">
-            <h1>Contact Me</h1>
             <div class="contact__information">
+                <h1>Contact Me</h1>
                 Isabel Matula<br>
                 Rostock - Germany<br>
                 <br>
                 Email: <a href="mailto:isabel.matula(at)outlook(dot)de">isabel.matula@outlook.de</a><br>
                 Linkedin: <a href="https://www.linkedin.com/in/isabel-matula" target="_blank">Isabel Matula</a>
             </div>
-            <div>
-                <a href="mailto:isabel.matula(at)outlook(dot)de" class="button">Contact me</a>
+            <div class="contact__animation">
+                <lord-icon
+                    src="https://cdn.lordicon.com/wzrwaorf.json"
+                    trigger="hover"
+                    stroke="light"
+                    colors="primary:#121331,secondary:#4c764c"
+                    style="width:250px;height:250px">
+                </lord-icon>
             </div>
         </div>
     </section>
