Add medium icon to footer

--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
         <div class="social-media">
             <a href="https://github.com/IsabelWen" target="_blank"><img src="img/github_icon.svg" alt="Github"></a>
             <a href="https://www.linkedin.com/in/isabel-matula" target="_blank"><img src="img/linkedin_icon.svg" alt="LinkedIn"></a>
+            <a href="https://medium.com/@isabelwen" target="_blank"><img src="img/medium_icon.svg" alt="Medium"></a>
         </div>
         <a href="#top">Back to top</a>
     </footer>
