Update contact section AOS

--- a/index.html
+++ b/index.html
@@ -213,13 +213,12 @@
         </div>
     </section>
     <!-- Contact Information -->
-    <section id="contact">
-        <div 
-        data-aos="fade-in" 
-        data-aos-delay="50"
-        data-aos-duration="1000"
-        data-aos-easing="ease-in-out" 
-        class="contact">
+    <section id="contact"
+    data-aos="fade-up" 
+    data-aos-delay="50"
+    data-aos-duration="1000"
+    data-aos-easing="ease-in-out" >
+        <div class="contact">
             <div class="contact__information">
                 <h1>Contact Me</h1>
                 Isabel Matula<br>
