Update meet app tags

--- a/index.html
+++ b/index.html
@@ -116,6 +116,8 @@
                     <span class="tag">CSS</span>
                     <span class="tag">AWS lambda</span>
                     <span class="tag">JavaScript</span>
+                    <span class="tag">React</span>
+                    <span class="tag">Recharts</span>
                     <span class="tag">Gherkin</span>
                 </div>
                 <a href="https://github.com/IsabelWen/meet" target="_blank" class="button">Code</a>
