--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     To make my coding passion my profession, I completed Career Foundry's Full-Stack Web Developer program, learning JavaScript, React, NoSQL and more. 
                     Now, I'm on the lookout for a role that values continuous growth. 
                 </p>
-                <a href="files/cv.pdf" target="_blank" download>Download my CV</a>
+                <a href="files/resume.pdf" target="_blank" download>Download my resume</a>
                 <a href="#contact" class="button">Get in Touch</a>
             </div>
         </div>
