Change profile img

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!-- Main content -->
     <section id="about">
         <div class="profile">
-            <img src="img/isabel-matula_profile.png" 
+            <img src="img/isabel-matula.png" 
             data-aos="fade-right" 
             data-aos-delay="50"
             data-aos-duration="1500"
