--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     To make my coding passion my profession, I completed Career Foundry's Full-Stack Web Developer program, learning JavaScript, React, NoSQL and more. 
                     Now, I'm on the lookout for a role that values continuous growth. 
                 </p>
-                <a href="files/Matula_Isabel_Resume.pdf" target="_blank" download>Download my resume</a>
+                <a href="files/Matula_Isabel_Resume.pdf" target="_blank" download>Download my resume.</a>
                 <a href="#contact" class="button">Get in Touch</a>
             </div>
         </div>
@@ -271,6 +271,7 @@
             <a href="https://medium.com/@isabelwen" target="_blank"><img src="img/medium_icon.svg" alt="Medium"></a>
         </div>
         <a href="#top">Back to top</a>
+        <a class="impressum" href="files/Impressum.pdf" target="_blank">Impressum</a>
     </footer>
     <script src="js/scripts.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
