--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <section class="work" id="work">
         <h1>Work</h1>
         <div class="project-list">
-            <!-- Project items -->
+            <!-- Project item 1 -->
             <div 
             data-aos="fade-up" 
             data-aos-delay="40"
@@ -98,6 +98,7 @@
                 <a href="https://github.com/IsabelWen/movie_api-client" target="_blank" class="button">Code</a>
                 <a href="https://mymovie-api.netlify.app/login" target="_blank" class="button">Demo</a>
              </div>
+             <!-- Project item 2 -->
              <div 
              data-aos="fade-up" 
              data-aos-delay="40"
@@ -122,6 +123,7 @@
                 <a href="https://github.com/IsabelWen/meet" target="_blank" class="button">Code</a>
                 <a href="https://isabelwen.github.io/meet/" target="_blank" class="button">Demo</a>
              </div>
+             <!-- Project item 3 -->
              <div 
              data-aos="fade-up" 
              data-aos-delay="40"
@@ -146,6 +148,7 @@
                 <a href="https://github.com/IsabelWen/myMovie-Angular-client" target="_blank" class="button">Code</a>
                 <a href="https://isabelwen.github.io/myMovie-Angular-app/welcome" target="_blank" class="button">Demo</a>
              </div>
+             <!-- Project item 4 -->
              <div 
              data-aos="fade-up" 
              data-aos-delay="40"
@@ -158,6 +161,16 @@
                     This API provide users with access to information about different movies, directors, and genres. 
                     Users are able to sign up, update their personal information, and create a list of their favorite movies.
                 </p>
+                <a href="https://github.com/IsabelWen/movie_api" target="_blank" class="button">Code</a>
+                <a class="open-modal button">More</a>
+             </div>
+             <dialog class="modal">
+                <h2>myMovie API</h2>
+                <img src="img/mymovie-db.png">
+                <p>
+                    This API provide users with access to information about different movies, directors, and genres. 
+                    Users are able to sign up, update their personal information, and create a list of their favorite movies.
+                </p>
                 <div class="tags">
                     <span class="tag">HTML</span>
                     <span class="tag">MongoDB</span>
@@ -166,8 +179,9 @@
                     <span class="tag">Express</span>
                     <span class="tag">Postman</span>
                 </div>
-                <a href="https://github.com/IsabelWen/movie_api" target="_blank" class="button">Code</a>
-             </div>
+                <button class="close-modal">Close</button>
+             </dialog>
+             <!-- Project item 5 -->
              <div 
              data-aos="fade-up" 
              data-aos-delay="40"
@@ -179,6 +193,15 @@
                 <p>
                     A chat app for mobile devices using React Native. The app provides users with a chat interface and options to share images, audios and location.
                 </p>
+                <a href="https://github.com/IsabelWen/chat" target="_blank" class="button">Code</a>
+                <a class="open-modal button">More</a>
+             </div>
+             <dialog class="modal">
+                <h2>Chat App</h2>
+                <img src="img/chat-app.png">
+                <p>
+                    A chat app for mobile devices using React Native. The app provides users with a chat interface and options to share images, audios and location.
+                </p>
                 <div class="tags">
                     <span class="tag">React Native</span>
                     <span class="tag">Firebase</span>
@@ -187,8 +210,9 @@
                     <span class="tag">Expo</span>
                     <span class="tag">GiftedChat</span>
                 </div>
-                <a href="https://github.com/IsabelWen/chat" target="_blank" class="button">Code</a>
-             </div>
+                <button class="close-modal">Close</button>
+             </dialog>
+             <!-- Project item 6 -->
              <div 
              data-aos="fade-up" 
              data-aos-delay="40"
